# trk_to_annotation

./: .gitignore  .wordlist.txt  README.md  main.py  pyproject.toml  requirements.txt  tests.py  utils.py
.github/workflows/: publish.yml  ruff-check.yml  ruff.yml  spellcheck.yml
segmentations/: info
src/: datatypes.py  id_sharding.py  main.py  preprocessing.py  segmentation.py  server.py  sharding.py  spacial_sharding.py  tests.py  tract_sharding.py  trk2annotation.py  trk_to_annotation.py  utils.py
src/trk2precomputed/: io.py  trkio.py  utils.py
src/trk_to_annotation/: __main__.py  id_sharding.py  preprocessing.py  segmentation.py  tract_sharding.py  utils.py
