[project]
name = "trk_to_annotation"
version = "0.1.0"
description = "Utilities for converting .trk tractography files into Neuroglancer precomputed annotation format, and serving them locally with HTTP requests."
authors = [
    { name = "James Scherick", email = "james_scherick@outlook.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

# Runtime dependencies go here
dependencies = [
    "numpy>=2.3.5",
    "nibabel>=5.3.2",
    "cloud-volume>=12.8.0",
    "rangehttpserver>=1.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"